; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_drive.c_GetPhysicalHandle.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_drive.c_GetPhysicalHandle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_HANDLE_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetPhysicalHandle(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @INVALID_HANDLE_VALUE, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i8* @GetPhysicalName(i32 %12)
  store i8* %13, i8** %10, align 8
  %14 = load i8*, i8** %10, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @GetHandle(i8* %14, i32 %15, i32 %16, i32 %17)
  store i32 %18, i32* %9, align 4
  %19 = load i8*, i8** %10, align 8
  %20 = call i32 @safe_free(i8* %19)
  %21 = load i32, i32* %9, align 4
  ret i32 %21
}

declare dso_local i8* @GetPhysicalName(i32) #1

declare dso_local i32 @GetHandle(i8*, i32, i32, i32) #1

declare dso_local i32 @safe_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
